--- a/autom4te.cache/traces.2
+++ b/autom4te.cache/traces.2
@@ -551,37 +551,45 @@ m4trace:configure.ac:15: -1- AC_SUBST_TRACE([am__fastdepCC_FALSE])
 m4trace:configure.ac:15: -1- m4_pattern_allow([^am__fastdepCC_FALSE$])
 m4trace:configure.ac:15: -1- _AM_SUBST_NOTMAKE([am__fastdepCC_TRUE])
 m4trace:configure.ac:15: -1- _AM_SUBST_NOTMAKE([am__fastdepCC_FALSE])
-m4trace:configure.ac:19: -1- AH_OUTPUT([HAVE_LIBFL], [/* Define to 1 if you have the `fl\' library (-lfl). */
+m4trace:configure.ac:16: -1- _m4_warn([obsolete], [The macro `AM_PROG_LIBTOOL' is obsolete.
+You should run autoupdate.], [aclocal.m4:130: AM_PROG_LIBTOOL is expanded from...
+configure.ac:16: the top level])
+m4trace:configure.ac:16: -1- LT_INIT
+m4trace:configure.ac:20: -1- AH_OUTPUT([HAVE_LIBFL], [/* Define to 1 if you have the `fl\' library (-lfl). */
 @%:@undef HAVE_LIBFL])
-m4trace:configure.ac:19: -1- AC_DEFINE_TRACE_LITERAL([HAVE_LIBFL])
-m4trace:configure.ac:19: -1- m4_pattern_allow([^HAVE_LIBFL$])
-m4trace:configure.ac:27: -1- AC_CONFIG_FILES([Makefile
+m4trace:configure.ac:20: -1- AC_DEFINE_TRACE_LITERAL([HAVE_LIBFL])
+m4trace:configure.ac:20: -1- m4_pattern_allow([^HAVE_LIBFL$])
+m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_LUA5_1_LUA_H], [/* Define to 1 if you have the <lua5.1/lua.h> header file. */
+@%:@undef HAVE_LUA5_1_LUA_H])
+m4trace:configure.ac:23: -1- AC_DEFINE_TRACE_LITERAL([HAVE_LUA5_1_LUA_H])
+m4trace:configure.ac:23: -1- m4_pattern_allow([^HAVE_LUA5_1_LUA_H$])
+m4trace:configure.ac:30: -1- AC_CONFIG_FILES([Makefile
                  libcnua/Makefile
                  libnua/Makefile])
-m4trace:configure.ac:30: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
-m4trace:configure.ac:30: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
-m4trace:configure.ac:30: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:30: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
-m4trace:configure.ac:30: -1- AC_SUBST_TRACE([LTLIBOBJS])
-m4trace:configure.ac:30: -1- m4_pattern_allow([^LTLIBOBJS$])
-m4trace:configure.ac:30: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
-m4trace:configure.ac:30: -1- AC_SUBST([am__EXEEXT_TRUE])
-m4trace:configure.ac:30: -1- AC_SUBST_TRACE([am__EXEEXT_TRUE])
-m4trace:configure.ac:30: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
-m4trace:configure.ac:30: -1- AC_SUBST([am__EXEEXT_FALSE])
-m4trace:configure.ac:30: -1- AC_SUBST_TRACE([am__EXEEXT_FALSE])
-m4trace:configure.ac:30: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
-m4trace:configure.ac:30: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
-m4trace:configure.ac:30: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
-m4trace:configure.ac:30: -1- AC_SUBST_TRACE([top_builddir])
-m4trace:configure.ac:30: -1- AC_SUBST_TRACE([top_build_prefix])
-m4trace:configure.ac:30: -1- AC_SUBST_TRACE([srcdir])
-m4trace:configure.ac:30: -1- AC_SUBST_TRACE([abs_srcdir])
-m4trace:configure.ac:30: -1- AC_SUBST_TRACE([top_srcdir])
-m4trace:configure.ac:30: -1- AC_SUBST_TRACE([abs_top_srcdir])
-m4trace:configure.ac:30: -1- AC_SUBST_TRACE([builddir])
-m4trace:configure.ac:30: -1- AC_SUBST_TRACE([abs_builddir])
-m4trace:configure.ac:30: -1- AC_SUBST_TRACE([abs_top_builddir])
-m4trace:configure.ac:30: -1- AC_SUBST_TRACE([INSTALL])
-m4trace:configure.ac:30: -1- AC_SUBST_TRACE([MKDIR_P])
-m4trace:configure.ac:30: -1- AC_REQUIRE_AUX_FILE([ltmain.sh])
+m4trace:configure.ac:33: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
+m4trace:configure.ac:33: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
+m4trace:configure.ac:33: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.ac:33: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
+m4trace:configure.ac:33: -1- AC_SUBST_TRACE([LTLIBOBJS])
+m4trace:configure.ac:33: -1- m4_pattern_allow([^LTLIBOBJS$])
+m4trace:configure.ac:33: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
+m4trace:configure.ac:33: -1- AC_SUBST([am__EXEEXT_TRUE])
+m4trace:configure.ac:33: -1- AC_SUBST_TRACE([am__EXEEXT_TRUE])
+m4trace:configure.ac:33: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
+m4trace:configure.ac:33: -1- AC_SUBST([am__EXEEXT_FALSE])
+m4trace:configure.ac:33: -1- AC_SUBST_TRACE([am__EXEEXT_FALSE])
+m4trace:configure.ac:33: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
+m4trace:configure.ac:33: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
+m4trace:configure.ac:33: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
+m4trace:configure.ac:33: -1- AC_SUBST_TRACE([top_builddir])
+m4trace:configure.ac:33: -1- AC_SUBST_TRACE([top_build_prefix])
+m4trace:configure.ac:33: -1- AC_SUBST_TRACE([srcdir])
+m4trace:configure.ac:33: -1- AC_SUBST_TRACE([abs_srcdir])
+m4trace:configure.ac:33: -1- AC_SUBST_TRACE([top_srcdir])
+m4trace:configure.ac:33: -1- AC_SUBST_TRACE([abs_top_srcdir])
+m4trace:configure.ac:33: -1- AC_SUBST_TRACE([builddir])
+m4trace:configure.ac:33: -1- AC_SUBST_TRACE([abs_builddir])
+m4trace:configure.ac:33: -1- AC_SUBST_TRACE([abs_top_builddir])
+m4trace:configure.ac:33: -1- AC_SUBST_TRACE([INSTALL])
+m4trace:configure.ac:33: -1- AC_SUBST_TRACE([MKDIR_P])
+m4trace:configure.ac:33: -1- AC_REQUIRE_AUX_FILE([ltmain.sh])
