--- a/autom4te.cache/traces.3
+++ b/autom4te.cache/traces.3
@@ -2468,14 +2468,20 @@ m4trace:configure.ac:15: -1- m4_pattern_allow([^am__fastdepCC_TRUE$])
 m4trace:configure.ac:15: -1- m4_pattern_allow([^am__fastdepCC_FALSE$])
 m4trace:configure.ac:15: -1- _AM_SUBST_NOTMAKE([am__fastdepCC_TRUE])
 m4trace:configure.ac:15: -1- _AM_SUBST_NOTMAKE([am__fastdepCC_FALSE])
-m4trace:configure.ac:19: -1- m4_pattern_allow([^HAVE_LIBFL$])
-m4trace:configure.ac:30: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:30: -1- m4_pattern_allow([^LTLIBOBJS$])
-m4trace:configure.ac:30: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
-m4trace:configure.ac:30: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
-m4trace:configure.ac:30: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
-m4trace:configure.ac:30: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
-m4trace:configure.ac:30: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
-m4trace:configure.ac:30: -1- _AC_AM_CONFIG_HEADER_HOOK(["$ac_file"])
-m4trace:configure.ac:30: -1- _AM_OUTPUT_DEPENDENCY_COMMANDS
-m4trace:configure.ac:30: -1- _LT_PROG_LTMAIN
+m4trace:configure.ac:16: -1- AM_PROG_LIBTOOL
+m4trace:configure.ac:16: -1- _m4_warn([obsolete], [The macro `AM_PROG_LIBTOOL' is obsolete.
+You should run autoupdate.], [/usr/share/aclocal/libtool.m4:108: AM_PROG_LIBTOOL is expanded from...
+configure.ac:16: the top level])
+m4trace:configure.ac:16: -1- LT_INIT
+m4trace:configure.ac:20: -1- m4_pattern_allow([^HAVE_LIBFL$])
+m4trace:configure.ac:23: -1- m4_pattern_allow([^HAVE_LUA5_1_LUA_H$])
+m4trace:configure.ac:33: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.ac:33: -1- m4_pattern_allow([^LTLIBOBJS$])
+m4trace:configure.ac:33: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
+m4trace:configure.ac:33: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
+m4trace:configure.ac:33: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
+m4trace:configure.ac:33: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
+m4trace:configure.ac:33: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
+m4trace:configure.ac:33: -1- _AC_AM_CONFIG_HEADER_HOOK(["$ac_file"])
+m4trace:configure.ac:33: -1- _AM_OUTPUT_DEPENDENCY_COMMANDS
+m4trace:configure.ac:33: -1- _LT_PROG_LTMAIN
